--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^47.0.0",
+    "@reduxjs/toolkit": "^1.9.1",
+    "expo": "^46.0.0",
     "expo-location": "^15.0.1",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "1.3.2",
     "react-native-maps-directions": "^1.9.0",
-    "tailwind-react-native-classnames": "^1.5.1",
-    "expo-updates": "~0.15.6"
+    "react-redux": "^8.0.5",
+    "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
