--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
-    "expo": "^46.0.0",
-    "expo-location": "^15.0.1",
+    "expo": "^47.0.0",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "react": "18.1.0",
